gcc/testsuite/rust/rustc/ui/parser/extern-crate-unexpected-token.rs
extern crte foo; // { dg-error "" "" { target *-*-* } }

